@@ -1,27 +1,23 @@
-# Sample .travis.yml for R projects.
-#
-# See the r-travis repo and its wiki 
-#     https://github.com/craigcitro/r-travis/
-#     https://github.com/eddelbuettel/r-travis/
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
 
 sudo: required
 
+dist: trusty
+
 before_install:
-  ## r-travis by Craig Citro et al
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - ./run.sh bootstrap
 
 install:
-  - ./travis-tool.sh install_aptget r-cran-rcpp r-cran-runit
+  - ./run.sh install_aptget  r-cran-rcpp r-cran-runit
 
-script: 
-  - ./travis-tool.sh run_tests
+script:
+  - ./run.sh run_tests
 
 after_failure:
-  - ./travis-tool.sh dump_logs
+  - ./run.sh dump_logs
 
 notifications:
   email:
