@@ -15,6 +15,8 @@
 
 	* README.md: Use canonical URLs
 
+	* .travis.yml: Switch to using run.sh for Travis CI
+
 2016-01-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (BugReports): Added BugReports: URL
